--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -1,6 +1,3 @@
-$light-color: #fff;
-$primary-color: #7eb126;
-
 @function set-text-color($color) {
   @if (lightness($color) > 90) {
     @return #000;
@@ -44,4 +41,20 @@ $primary-color: #7eb126;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+}
+
+@mixin media-md {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+@mixin media-lg {
+  @media screen and (max-width: 990px) {
+    @content;
+  }
+}
+@mixin media-xl {
+  @media screen and (max-width: 1300px) {
+    @content;
+  }
 }
