--- a/src/assets/scss/_articles.scss
+++ b/src/assets/scss/_articles.scss
@@ -1,3 +1,12 @@
+.animLeft {
+  animation-duration: 4s;
+  animation-name: bounceInLeft;
+}
+.animRight {
+  animation-duration: 4s;
+  animation-name: bounceInRight;
+}
+
 .articles {
   .why__back {
     @include before("WHY");
@@ -12,10 +21,16 @@
   .why__text {
     padding-left: 15vw;
     height: 110vh;
+
     .text {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 15vh;
+      p {
+        font-size: 16px;
+        line-height: 24px;
+        min-height: 250px;
+      }
       .why__text1 {
         @include set-why("01");
       }
@@ -44,13 +59,13 @@
   }
   .service {
     h1 {
-      @extend %heading;
+      padding-top: 10vh;
     }
     color: #fff;
     height: 150vh;
-    width: 100vw;
-    padding-left: 15vw;
-    padding-bottom: 15vh;
+    width: 87vw;
+    padding-left: 18vw;
+    margin-top: 10vh;
     background-color: #000;
     .hex-grid__list {
       display: flex;
@@ -74,7 +89,7 @@
         @include set-service("https://quantox.com/assets/img/consulting1.png");
       }
       .hex-5 {
-        margin-left: 9vw;
+        margin-left: 10vw;
         @include set-service("https://quantox.com/assets/img/fe.png");
       }
       .hex-6 {
@@ -145,6 +160,7 @@
       h1 {
         padding-top: 10vh;
         padding-left: 15vw;
+        text-align: left;
       }
     }
     .working__articles {
@@ -152,23 +168,22 @@
       padding-left: 15vw;
       display: grid;
       grid-template-columns: repeat(2, 30vw);
-      grid-template-rows: repeat(3, 1fr);
       text-align: left;
       gap: 20vh;
       .working__article1 {
-        @include set-working("images/pic-1.png");
+        @include set-working("https://quantox.com/assets/img/pic-1.png");
       }
       .working__article2 {
-        @include set-working("images/pic-2.png");
+        @include set-working("https://quantox.com/assets/img/pic-2.png");
       }
       .working__article3 {
-        @include set-working("images/pic-3.png");
+        @include set-working("https://quantox.com/assets/img/pic-3.png");
       }
       .working__article4 {
-        @include set-working("images/pic-4.png");
+        @include set-working("https://quantox.com/assets/img/pic-4.png");
       }
       .working__article5 {
-        @include set-working("images/pic-5.png");
+        @include set-working("https://quantox.com/assets/img/pic-5.png");
       }
     }
   }
