--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -15,7 +15,7 @@
   &::before {
     content: $number;
     opacity: 0.1;
-    color: #000000;
+    color: $secondary-color;
     font-size: 200px;
     line-height: 200px;
     z-index: 9;
@@ -49,12 +49,12 @@
   }
 }
 @mixin media-lg {
-  @media screen and (max-width: 990px) {
+  @media screen and (min-width: 768px) and (max-width: 990px) {
     @content;
   }
 }
 @mixin media-xl {
-  @media screen and (max-width: 1300px) {
+  @media screen and (min-width: 990px) and (max-width: 1300px) {
     @content;
   }
 }
