--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -2,14 +2,20 @@ header {
   background: url("https://quantox.com/assets/img/quantox-logo-bkg.png");
   position: relative;
   .header {
+    padding-top: 30px;
     position: sticky;
     z-index: 999;
     width: 100vw;
     color: #fff;
+
+    .logo {
+      padding-left: 40px;
+    }
     @include flex();
     .header__right {
       display: flex;
-      padding: 20px;
+      padding-right: 40px;
+      letter-spacing: 0.15em;
       .languages {
         padding: 15px;
         a {
@@ -33,7 +39,7 @@ header {
     .hero {
       position: relative;
       width: 100%;
-      height: 105vh;
+      height: 106vh;
       color: #fff;
       display: grid;
       background: url("https://quantox.com/assets/img/quantox-logo-bkg.png");
@@ -41,18 +47,17 @@ header {
       margin-bottom: 0;
       a {
         place-self: end center;
-        padding-bottom: 30px;
+        padding-bottom: 10vh;
         img {
           width: 50px;
         }
       }
       h1 {
-        overflow: hidden;
         border-right: 0.15em solid #e5e5e5;
         font-size: 3vw;
         white-space: nowrap;
         letter-spacing: 0.15em;
-        place-self: center;
+        place-self: end center;
         animation: typing 3s steps(40, end), blink-caret 0.75s step-end infinite;
       }
     }
